--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -412,8 +412,48 @@ button {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: gray;
+  background-color: #8080808c;
   position: relative;
+  color: #fff;
+}
+
+.equity-page p {
+  margin-bottom: 0;
+  text-align: center;
+  font-size: 14px;
+  color: teal;
+}
+
+.equity-page p button {
+  color: #fff;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.news-info h4 {
+  font-size: 12px;
+  margin-left: 3px;
+  margin-bottom: 0;
+}
+
+.news-info span {
+  font-size: 10px;
+  margin-left: 5px;
+  margin-bottom: 0;
+}
+
+.news-media img {
+  margin-top: 10px;
+  border-top: 1px dashed grey;
+  width: 100%;
+  height: 250px;
+}
+
+.news-description p {
+  margin-bottom: 0;
+  line-height: 30px;
+  color: #000;
+  text-align: justify;
 }
 
 .user-post-icon i {
