--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -428,51 +428,6 @@ button {
   color: #fff;
 }
 
-.equity-page p {
-  margin-bottom: 0;
-  text-align: center;
-  font-size: 14px;
-  color: teal;
-}
-
-.equity-page p button {
-  color: #fff;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.news-info h4 {
-  font-size: 12px;
-  margin-left: 3px;
-  margin-bottom: 0;
-}
-
-.news-info span {
-  font-size: 10px;
-  margin-left: 5px;
-  margin-bottom: 0;
-}
-
-.news-media img {
-  margin-top: 10px;
-  border-top: 1px dashed grey;
-  width: 100%;
-  height: 250px;
-}
-
-.news-footer-info p {
-  margin-bottom: 0;
-  color: teal;
-  font-size: 12px;
-}
-
-.news-description p {
-  margin-bottom: 0;
-  line-height: 30px;
-  color: #000;
-  text-align: justify;
-}
-
 .user-post-icon i {
   position: absolute;
   top: 33%;
@@ -525,6 +480,108 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.side-bar-content {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+}
+
+.fixture {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  background-color: white;
+}
+
+.fixture-header h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.fixture-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+  border-top: 1px solid #ddd;
+}
+
+.fixture-item:first-child {
+  border-top: none;
+}
+
+.team {
+  display: flex;
+  align-items: center;
+}
+
+.team img {
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
+}
+
+.fixture-details {
+  text-align: center;
+}
+
+.fixture-details .vs {
+  font-weight: bold;
+  font-size: 16px;
+  margin: 0 10px;
+}
+
+.match-date,
+.match-time {
+  display: block;
+  font-size: 14px;
+}
+
+.scorecard {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.score-table,
+.score-summary {
+  width: 100%;
+  margin-bottom: 20px;
+  border-collapse: collapse;
+  font-size: 12px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.score-table th,
+.score-table td,
+.score-summary th,
+.score-summary td {
+  padding: 8px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+.score-table th,
+.score-summary th {
+  background-color: #f0f0f0;
+  font-weight: bold;
+}
+
+.score-summary th {
+  background-color: #e0e0e0;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tbody tr:hover {
+  background-color: #f1f1f1;
 }
 
 /* Responsive Styles */
